Fix initial notification permissions in web app mode

If we automatically grant notification permissions, then web apps that
test notification permissions without requesting them, like Riot, will
not work properly. It looks like I only tested my previous attempt to
fix this issue in normal browser mode.

The fix is just one call to ephy_permissions_manager_set_permissions().
That requires moving some code around.

https://bugzilla.gnome.org/show_bug.cgi?id=782386